assets/css/main.css
/* ... */
/*
Constrain images and videos to the parent width and preserve their intrinsic aspect ratio. (https://github.com/mozdevs/cssremedy/issues/14)
*/

img,
video {
  max-width: 100%;
  height: auto;
}

/* Make elements with the HTML hidden attribute stay hidden by default */

[hidden] {
  display: none;
}

ul, ol {
        margin-bottom: 10px;
        padding-left: 30px;
        list-style-type: circle;
    }

li {
        > ul,
        > ol {
            margin-bottom: 0;
        }
    }

h1{font-size:36px}

h2{font-size:30px}

h3{font-size:24px}

h4{font-size:20px}

h5{font-size:18px}

h6{font-size:16px}

h1,h2,h3,h4,h5,h6{font-weight:400;margin:10px 0}

hr{border:0;border-top:1px solid #eee;margin:20px 0}

blockquote {
        background: #E6F2E6;
        border-left: 3px solid #408040;
        font-style: italic;
        padding-left: 5px;
        margin-left: 2px;
    }

pre {
        background: #2F3132;
        border-left: 5px solid #345678;
        padding: 5px;
        margin-left: 2px;
    }

pre:hover {
        border-left: 5px solid #55AAFF;
    }

code {
        background: #2F3132;
        font-family: JetBrains Mono NL, Courier New, Monospaced;
        font-size: 0.9em;
        padding-left: 5px;
        padding-right: 5px;
    }

table {
        border-spacing: 0px;
        border-right: 1px solid gray;
        border-bottom: 1px solid gray;
    }

th, td {
        border-left: 1px solid gray;
        border-top: 1px solid gray;
    }

th {
        background: #D4D4D4;
        font-weight: 600;
    }

*, ::before, ::after {--tw-border-spacing-x:0;--tw-border-spacing-y:0;--tw-translate-x:0;--tw-translate-y:0;--tw-rotate:0;--tw-skew-x:0;--tw-skew-y:0;--tw-scale-x:1;--tw-scale-y:1;--tw-pan-x: ;--tw-pan-y: ;--tw-pinch-zoom: ;--tw-scroll-snap-strictness:proximity;--tw-gradient-from-position: ;--tw-gradient-via-position: ;--tw-gradient-to-position: ;--tw-ordinal: ;--tw-slashed-zero: ;--tw-numeric-figure: ;--tw-numeric-spacing: ;--tw-numeric-fraction: ;--tw-ring-inset: ;--tw-ring-offset-width:0px;--tw-ring-offset-color:#fff;--tw-ring-color:rgb(59 130 246 / 0.5);--tw-ring-offset-shadow:0 0 #0000;--tw-ring-shadow:0 0 #0000;--tw-shadow:0 0 #0000;--tw-shadow-colored:0 0 #0000;--tw-blur: ;--tw-brightness: ;--tw-contrast: ;--tw-grayscale: ;--tw-hue-rotate: ;--tw-invert: ;--tw-saturate: ;--tw-sepia: ;--tw-drop-shadow: ;--tw-backdrop-blur: ;--tw-backdrop-brightness: ;--tw-backdrop-contrast: ;--tw-backdrop-grayscale: ;--tw-backdrop-hue-rotate: ;--tw-backdrop-invert: ;--tw-backdrop-opacity: ;--tw-backdrop-saturate: ;--tw-backdrop-sepia: ;--tw-contain-size: ;--tw-contain-layout: ;--tw-contain-paint: ;--tw-contain-style: ;}

::backdrop {--tw-border-spacing-x:0;--tw-border-spacing-y:0;--tw-translate-x:0;--tw-translate-y:0;--tw-rotate:0;--tw-skew-x:0;--tw-skew-y:0;--tw-scale-x:1;--tw-scale-y:1;--tw-pan-x: ;--tw-pan-y: ;--tw-pinch-zoom: ;--tw-scroll-snap-strictness:proximity;--tw-gradient-from-position: ;--tw-gradient-via-position: ;--tw-gradient-to-position: ;--tw-ordinal: ;--tw-slashed-zero: ;--tw-numeric-figure: ;--tw-numeric-spacing: ;--tw-numeric-fraction: ;--tw-ring-inset: ;--tw-ring-offset-width:0px;--tw-ring-offset-color:#fff;--tw-ring-color:rgb(59 130 246 / 0.5);--tw-ring-offset-shadow:0 0 #0000;--tw-ring-shadow:0 0 #0000;--tw-shadow:0 0 #0000;--tw-shadow-colored:0 0 #0000;--tw-blur: ;--tw-brightness: ;--tw-contrast: ;--tw-grayscale: ;--tw-hue-rotate: ;--tw-invert: ;--tw-saturate: ;--tw-sepia: ;--tw-drop-shadow: ;--tw-backdrop-blur: ;--tw-backdrop-brightness: ;--tw-backdrop-contrast: ;--tw-backdrop-grayscale: ;--tw-backdrop-hue-rotate: ;--tw-backdrop-invert: ;--tw-backdrop-opacity: ;--tw-backdrop-saturate: ;--tw-backdrop-sepia: ;--tw-contain-size: ;--tw-contain-layout: ;--tw-contain-paint: ;--tw-contain-style: ;}

.container {width:100%;}

@media (min-width: 640px) {

.container {max-width:640px;}}

@media (min-width: 768px) {

.container {max-width:768px;}}

@media (min-width: 1024px) {

.container {max-width:1024px;}}

@media (min-width: 1280px) {

.container {max-width:1280px;}}

@media (min-width: 1536px) {

.container {max-width:1536px;}}

.visible {visibility:visible;}

.invisible {visibility:hidden;}

.fixed {position:fixed;}

.absolute {position:absolute;}

.relative {position:relative;}

.sticky {position:sticky;}

.bottom-0 {bottom:0px;}

.bottom-3 {bottom:0.75rem;}

.bottom-4 {bottom:1rem;}

.bottom-40 {bottom:10rem;}

.left-0 {left:0px;}

.left-1 {left:0.25rem;}

.left-16 {left:4rem;}

.left-20 {left:5rem;}

.left-4 {left:1rem;}

.right-6 {right:1.5rem;}

.top-0 {top:0px;}

.top-1 {top:0.25rem;}

.top-16 {top:4rem;}

.top-3 {top:0.75rem;}

.top-36 {top:9rem;}

.top-4 {top:1rem;}

.top-8 {top:2rem;}

.z-0 {z-index:0;}

.z-10 {z-index:10;}

.z-20 {z-index:20;}

.z-30 {z-index:30;}

.z-40 {z-index:40;}

.z-50 {z-index:50;}

.z-\[-10\] {z-index:-10;}

.z-auto {z-index:auto;}

.m-0 {margin:0px;}

.m-4 {margin:1rem;}

.m-auto {margin:auto;}

.mx-0 {margin-left:0px;margin-right:0px;}

.mx-auto {margin-left:auto;margin-right:auto;}

.my-0 {margin-top:0px;margin-bottom:0px;}

.my-4 {margin-top:1rem;margin-bottom:1rem;}

.my-6 {margin-top:1.5rem;margin-bottom:1.5rem;}

.mb-0 {margin-bottom:0px;}

.mb-1 {margin-bottom:0.25rem;}

.mb-10 {margin-bottom:2.5rem;}

.mb-16 {margin-bottom:4rem;}

.mb-2 {margin-bottom:0.5rem;}

.mb-4 {margin-bottom:1rem;}

.mb-6 {margin-bottom:1.5rem;}

.mb-8 {margin-bottom:2rem;}

.me-2 {margin-inline-end:0.5rem;}

.ml-10 {margin-left:2.5rem;}

.ml-4 {margin-left:1rem;}

.ml-6 {margin-left:1.5rem;}

.ml-8 {margin-left:2rem;}

.mr-10 {margin-right:2.5rem;}

.mr-4 {margin-right:1rem;}

.mr-8 {margin-right:2rem;}

.mt-0 {margin-top:0px;}

.mt-2 {margin-top:0.5rem;}

.mt-3 {margin-top:0.75rem;}

.mt-4 {margin-top:1rem;}

.mt-\[2px\] {margin-top:2px;}

.block {display:block;}

.inline {display:inline;}

.flex {display:flex;}

.inline-flex {display:inline-flex;}

.table {display:table;}

.hidden {display:none;}

.aspect-auto {aspect-ratio:auto;}
/* ... */

